src/objects/Opportunity_Record_Type_To_Team_Role__mdt.object
<CustomObject>
    <description>This custom meta data type stores the mapping between Opportunity record type vs role from Sales account team. This is used in batch class SFA_UpdateOpportunityOwner to update the opportunity owner with the corresponding  team member.</description>
    <fields>
        <fullName>Account_Team_Member_Role__c</fullName>
        <label>Account Team Member Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Recepient__c</fullName>
        <label>Email Recipient</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type__c</fullName>
        <label>Opportunity Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stages_For_Consideration__c</fullName>
        <label>Opportunity Stages Exclusion</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Opportunity Record Type To Team Role</label>
    <pluralLabel>Opportunity Record Type To Team Roles</pluralLabel>
</CustomObject>